base/open-webui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  labels:
    app.kubernetes.io/part-of: ui
